--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
   widgetbook_annotation: ^3.0.0-rc.2
   widgetbook: ^3.0.0-rc.2
 
@@ -50,8 +47,11 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
   build_runner: ^2.3.3
-  widgetbook_generator: ^3.0.0-rc.2
-
+  widgetbook_generator:
+    git:
+      url: https://github.com/widgetbook/widgetbook.git
+      path: packages/widgetbook_generator/
+      ref: fix/asset-imports
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -65,9 +65,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+  - test/
+  - test/widgets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
